name:                cloudbuild-state
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cloudbuild-state#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cloudbuild-state
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, aeson, containers, directory, bytestring, filelock == 0.1.1.5
